--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
+ *{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+ }
+
+ .main-div{
+  width: 100%;
+  height: 100vh;
+  background: greenyellow;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-}
+ }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ .center-div{
+  width: 28%;
+  height: 70vh;
+  background-color: white;
+  box-shadow: 5px 5px 25px -5px rgba(0,0,0,0.5);
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+ }
+
+ h1{
   color: white;
-}
+  background: transparent;
+  font-size: 50px;
+  background-color: purple;
+  padding: 6px 0 2px 0;
+  margin-bottom: 10px;
+  width: 100%;
+  box-shadow:5px 5px 25px -5px rgba(0,0,0,0.5) ;
+ }
 
-.App-link {
-  color: #61dafb;
-}
+ button{
+  min-height: 40px;
+  border-radius: 5%;
+  border-color: transparent;
+  background-color: purple;
+  color: white;
+  font-size: 20px;
+  border: none;
+  outline: none;
+  padding: 0 15px;
+  margin: 30px 2px;
+  box-shadow:5px 5px 25px -5px rgba(0,0,0,0.5) ;
+ }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+ button:hover{
+  background-color: goldenrod;
+ }
+
+ .btn-div{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+ }
+
+ @media screen and (max-width : 992) {
+  .center-div{
+    width: 50%;
   }
-  to {
-    transform: rotate(360deg);
+  .btn-div button{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-}
+
+ }
